@@ -454,7 +454,7 @@ my $xslt;
 # OK so all the other variables are in lowercase and local.  The reason why
 # version is specified differently is that that it is compatible with
 # Module::Build therefore making distribution and installing easier.
-my $VERSION = '0.7';
+my $VERSION = '0.1';
 
 $run_date = localtime;
 
@@ -579,7 +579,7 @@ if ($output_file) {
 # Do the report.
 
 if ($format eq 'text') {
-	print 'xndiff run ', $run_date, "\n",
+	print 'yandiff run ', $run_date, "\n",
 	    'command line: ', $command_line, "\n",
 	    'baseline: ', $baseline_file, "\n",
 	    'observed: ', $observed_file, "\n";
@@ -590,7 +590,7 @@ if ($format eq 'text') {
 	    $stylesheet,
 	    '"?>',
 	    "\n" if ($stylesheet);
-	print "<xndiff rundate=\"$run_date\"",
+	print "<yandiff rundate=\"$run_date\"",
 	    ' version="', $VERSION, '"',
 	    ' command_line="', $command_line, '">', "\n";
 	print " <parameters>\n";
@@ -615,12 +615,12 @@ show_new_hosts($format, $baseline, $observed) if $show_new_hosts;
 show_missing_hosts($format, $baseline, $observed) if $show_missing_hosts;
 show_changed_hosts($format, $baseline, $observed, $output_ports)
     if $show_changed_hosts;
-print "</xndiff>\n" if ($format eq 'xml');
+print "</yandiff>\n" if ($format eq 'xml');
 
 ##############################################################################
 # Package: Host
 #
-# This package is for use with xndiff and is for using an object representing
+# This package is for use with yandiff and is for using an object representing
 # a host.
 #
 # Example:
@@ -752,7 +752,7 @@ sub to_xml {
 ##############################################################################
 # Package: Service
 #
-# This package is for use with xndiff and is for using an object representing
+# This package is for use with yandiff and is for using an object representing
 # a TCP or UDP service.
 #
 # Example:
@@ -861,7 +861,7 @@ sub to_xml {
 ##############################################################################
 # Package: Stylesheet
 #
-# This package is for use with xndiff and is for generating an XML
+# This package is for use with yandiff and is for generating an XML
 # stylesheet.
 #
 # Example:
@@ -889,22 +889,22 @@ sub generate {
 	print OUTPUT <<_EOF;
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Generated by the xndiff program.
+ Generated by the yandiff program.
 
- See http://code.google.com/p/xndiff for details.
+ See http://code.google.com/p/yandiff for details.
 -->
 
 <xsl:stylesheet version="1.0"
  xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
 
 <!-- ............... Set the VERSION here ....................... -->
-<xsl:variable name="xndiff_xsl_version">1.4</xsl:variable>
+<xsl:variable name="yandiff_xsl_version">1.0</xsl:variable>
 <!-- ............................................................ -->
 
-<xsl:template match="xndiff">
+<xsl:template match="yandiff">
 <html>
 <head>
-<title>xndiff report</title>
+<title>yandiff report</title>
 <style type="text/css">
 /* stylesheet print */
 \@media print
@@ -1004,12 +1004,12 @@ sub generate {
 </style>
 </head>
 <body>
- <h1>Xndiff</h1>
+ <h1>Yandiff</h1>
 
  <h2>Run Parameters</h2>
 
  <table border="1">
-  <caption><h3>Xndiff Information</h3></caption>
+  <caption><h3>Yandiff Information</h3></caption>
   <tr>
    <td>Run Date</td>
    <td><xsl:value-of select="\@rundate"/></td>
@@ -1188,9 +1188,9 @@ sub generate {
  </xsl:if>
 
  <sub>
-  Ndiff stylesheet version: <xsl:value-of select="\$xndiff_xsl_version" />
+  Ndiff stylesheet version: <xsl:value-of select="\$yandiff_xsl_version" />
   &lt;<a href = 
-  "http://code.google.com/p/xndiff">http://code.google.com/p/xndiff</a>&gt;
+  "http://code.google.com/p/yandiff">http://code.google.com/p/yandiff</a>&gt;
  </sub>
 </body>
 </html>
@@ -1328,11 +1328,11 @@ __END__
 
 =head1 NAME
 
-xndiff - find differences between two nmap network scans
+yandiff - Yet Another Nmap Differential Script
 
 =head1 SYNOPSIS
 
-xndiff
+yandiff
 [-f, --format <text | xml>]
 [-of, --output-file file]
 [-oh, --output-hosts <nmc>]
@@ -1341,15 +1341,15 @@ xndiff
 --baseline file
 --observed file
 
-xndiff file file
+yandiff file file
 
-xndiff --gen-stylesheet file
+yandiff --gen-stylesheet file
 
-xndiff --help | -?
+yandiff --help | -?
 
-xndiff --man
+yandiff --man
 
-xndiff --version
+yandiff --version
 
 =head1 OPTIONS
 
@@ -1360,7 +1360,8 @@ xndiff --version
 =item B<--baseline> file
 
 Specifies the nmap results to use as the baseline for the comparison.
-May be ommitted if the baseline and observed files are the only two arguments given.
+May be ommitted if the baseline and observed files are the only two arguments
+given.
 
 =item B<-f> <text | xml>
 
@@ -1393,7 +1394,8 @@ Print the manual page and exit.
 
 Specifies the nmap results to use as the "observed results" for the
 comparison.
-May be ommitted if the baseline and observed files are the only two arguments given.
+May be ommitted if the baseline and observed files are the only two arguments
+given.
 
 =item B<-of> file
 
@@ -1452,7 +1454,7 @@ Print the version and exit.
 
 =head1 DESCRIPTION
 
-B<xndiff> is a command line utility (written in Perl) that allows users to
+B<yandiff> is a command line utility (written in Perl) that allows users to
 monitor networks for changes in port states and running services. It does this
 by comparing the XML output of two nmap scans, one designated the "baseline",
 the other the "observation". Alternatively a third XML file can be created
@@ -1464,7 +1466,7 @@ To generate a report to screen:
 
 =over 8
 
-xndiff baseline.xml observed.xml
+yandiff baseline.xml observed.xml
 
 =back
 
@@ -1472,7 +1474,7 @@ which is equivalent to
 
 =over 8
 
-xndiff --baseline baseline.xml --observed observed.xml
+yandiff --baseline baseline.xml --observed observed.xml
 
 =back
 
@@ -1480,7 +1482,7 @@ To generate a stylesheet to file:
 
 =over 8
 
-xndiff --gen-stylesheet xndiff.xsl
+yandiff --gen-stylesheet yandiff.xsl
 
 =back
 
@@ -1489,20 +1491,20 @@ previous example:
 
 =over 8
 
-xndiff --baseline baseline.xml --observed observed.xml \
+yandiff --baseline baseline.xml --observed observed.xml \
 	--format xml --output-file report.xml
 
 =back
 
 =head1 HISTORY
 
-Xndiff is loosely based on ndiff written by James Levine, except
-where ndiff used "grepable" output from nmap, xndiff reads XML output using
+Yandiff is loosely based on ndiff written by James Levine, except
+where ndiff used "grepable" output from nmap, yandiff reads XML output using
 Nmap::Parser.
 
 =head1 AUTHORS
 
-The Xndiff project at http://code.google.com/p/xndiff
+The Yandiff project at http://code.google.com/p/yandiff
 
 =head1 BUGS
 
@@ -1510,6 +1512,6 @@ The project members graciously accept that there may be bugs.  If there are
 any found, please report them at the link below or browse the issues reported
 to see if a fix is either available or in progress.
 
-http://code.google.com/p/xndiff/issues
+http://code.google.com/p/yandiff/issues
 
 =cut
