@@ -1,3 +1,9 @@
+25 June 2009 - Release 0.1 of yandiff after the rename of the project from
+xndiff.
+
+============================================================================
+=========================== XNDIFF =========================================
+============================================================================
 17 June 2009 - Release 0.7.  Allows the user to use a slightly less verbose
 command line for a quick check (issue27).  Also the output of both text and
 XML reports now show what the previous status of a port was (issue21 and
